--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -125,7 +125,7 @@
                                 <div class="client__modal-confirm-buttons mb-3 row ">
                                     <button type="button"
                                         class="client__modal-confirm-submit btn btn-outline-secondary col-md-5"
-                                        (click)="formSubmit()" data-bs-dismiss="modal">Confirmar</button>
+                                        (click)="formSubmit()" >Confirmar</button>
                                     <button
                                         class="client__modal-confirm-cancel btn btn-secondary col-md-5 offset-md-2 mt-2 mt-md-0"
                                         data-bs-dismiss="modal">Cancelar</button>
