--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <button class="login__card-submit btn btn-secondary" type="submit" (click)="login()">Iniciar sesión</button>
+                                    <button class="login__card-submit btn btn-secondary" type="submit" (click)="login()" (click)="showSpinner()">Iniciar sesión</button>
                                 </div>
                             </div>
                         </form>
@@ -39,3 +39,4 @@
         </section>
     </div>
 </main>
+<ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
