--- a/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
+++ b/src/app/components/admin/admin-accommodations/admin-accommodations.component.html
@@ -47,17 +47,6 @@
                     <div class="admin__menu-btn-text d-inline ms-2">Reservas</div>
                 </div>
             </a>
-            <a href="" class="admin__menu-link">
-                <div class="admin__menu-btn d-lg-flex justify-content-center align-items-center py-4">
-                    <svg class="admin__menu-btn-icon d-inline" width="30" height="30" viewBox="0 0 31 31" fill="#FFFFFF"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M27.1757 19.0626C27.1757 13.2813 22.792 8.51132 17.1757 7.88632V5.31257H14.6757V7.88632C9.0595 8.51132 4.67575 13.2813 4.67575 19.0626V21.5626H27.1757V19.0626ZM3.42575 22.8126H28.4257V25.3126H3.42575V22.8126Z"
-                            fill="white" />
-                    </svg>
-                    <div class="admin__menu-btn-text d-inline ms-2">Servicios</div>
-                </div>
-            </a>
 
         </section>
         <section class="admin__content col-xxl-10 col-lg-9">
@@ -282,3 +271,4 @@
         </section>
     </div>
 </main>
+<ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
