--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -229,4 +229,5 @@
         </div>
     </div>
 </main>
+<ngx-spinner bdColor = "rgba(0,0,0,0.4)" size = "medium" color = "#272a57" type = "ball-square-spin" [fullScreen] = "true"></ngx-spinner>
 <app-footer></app-footer>
