--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -24,7 +24,7 @@
                     <div class="admin__menu-btn-text d-inline ms-2">Alojamientos</div>
                 </div>
             </a>
-            <a href="" class="admin__menu-link">
+            <a href="" class="admin__menu-link" [routerLink]="['/admin-acco-units']">
                 <div class="admin__menu-btn d-lg-flex justify-content-center align-items-center py-4">
                     <svg class="admin__menu-btn-icon d-inline" width="30" height="30" viewBox="0 0 31 31" fill="#FFFFFF"
                         xmlns="http://www.w3.org/2000/svg">
